--- a/app/index.html
+++ b/app/index.html
@@ -9,22 +9,22 @@ current: index
 <div class="bg-start"></div>
 <!-- 紅綠燈 -->
 <div class="bg-ready">
-  <img src="./assets/images/main/ready_3.png" alt="" class="bg-ready__r">
-  <img src="./assets/images/main/ready_2.png" alt="" class="bg-ready__y">
-  <img src="./assets/images/main/ready_1.png" alt="" class="bg-ready__g">
+  <img src="./assets/images/main/ready_3.png" alt="" class="bg-ready-r">
+  <img src="./assets/images/main/ready_2.png" alt="" class="bg-ready-y">
+  <img src="./assets/images/main/ready_1.png" alt="" class="bg-ready-g">
 </div>
 <!-- 跑道 -->
 <div class="bg-road"></div>
 <!-- 地圖 -->
 <div class="bg-map">
   <img src="./assets/images/main/map.svg" alt="Map">
-  <img src="./assets/images/main/map_now.gif" alt="Map 現在位置" class="bg-map__now">
+  <img src="./assets/images/main/map_now.gif" alt="Map 現在位置" class="bg-map-now">
 </div>
 <!-- 跑者 -->
 <div class="bg-runner">
-  <img src="./assets/images/character/character_f2e.gif" alt="" class="bg-runner__f2e">
-  <img src="./assets/images/character/character_ui.gif" alt="" class="bg-runner__ui">
-  <img src="./assets/images/character/character_team.gif" alt="" class="bg-runner__team">
+  <img src="./assets/images/character/character_f2e.gif" alt="" class="bg-runner-f2e">
+  <img src="./assets/images/character/character_ui.gif" alt="" class="bg-runner-ui">
+  <img src="./assets/images/character/character_team.gif" alt="" class="bg-runner-team">
 </div>
 <!-- 雲朵 -->
 <div class="bg-cloud">
@@ -33,14 +33,7 @@ current: index
 </div>
 
 <main class="main">
-  <!-- 頂部 nav -->
-  <nav class="btn-user">
-    <a href="https://2022.thef2e.com/users"></a>
-  </nav>
-  <!-- 側邊 nav -->
-  <nav>
-    
-  </nav>
+  
   <!-- btn join -->
   <div class="btn-signup d-flex flex-column align-items-center">
     <h5 class="text-primary">JOIN</h5>
@@ -49,14 +42,14 @@ current: index
       <img src="./assets/images/btn/btn_join.png" alt="Join Button" class="btn-join">
     </a>
   </div>
-  
-  <section class="container">
+  <!-- Logo -->
+  <section class="container anima-logo">
     <div class="text-center d-flex flex-column align-items-center mb-10 pt-12">
       <img src="./assets/images/logo/logo_text.png" alt="Logo" class="logo">
       <h1 class="bg-highlight text-white flex-grow-0 rounded-100 py-2 px-10">互動式網頁設計</h1>
     </div>
 
-    <div class="row justify-content-center">
+    <div class="row justify-content-center anima-user">
       <div class="col-10">
         <ul class="row text-center text-primary">
           <li class="col-4">
@@ -85,6 +78,7 @@ current: index
     </div>
   </section>
 
+  <div class=""></div>
 
 
 </main>
