紅綠燈動畫更新

--- a/app/index.html
+++ b/app/index.html
@@ -8,10 +8,16 @@ current: index
 <!-- 起跑門 -->
 <div class="bg-start"></div>
 <!-- 紅綠燈 -->
-<div class="bg-ready">
-  <img src="./assets/images/main/ready_3.png" alt="" class="bg-ready-r">
-  <img src="./assets/images/main/ready_2.png" alt="" class="bg-ready-y">
-  <img src="./assets/images/main/ready_1.png" alt="" class="bg-ready-g">
+<div class="bg-ready text-highlight">
+  <p class="text-center fs-4 bg-ready-text anima-ready">READY?</p>
+  <div class="position-relative">
+    <img src="./assets/images/main/ready_frame.png" alt="" class="bg-ready-frame">
+    <div>
+      <img src="./assets/images/main/ready_3.png" alt="" class="bg-ready-r">
+      <img src="./assets/images/main/ready_2.png" alt="" class="bg-ready-y anima-ready">
+      <img src="./assets/images/main/ready_1.png" alt="" class="bg-ready-g anima-ready">
+    </div>
+  </div>
 </div>
 <!-- 跑道 -->
 <div class="bg-road"></div>
